	- added Coro::Semaphore::adjust.
        - added Coro::Util::fork_eval.
        - added Coro::Storable::{nfreeze,blocking_{freeze,nfreeze}}.
        - reduce initial stack sizes to allow for "micro-coroutines".
        - better async_pool resource management, moved parts of async_pool
          handling to XS (major speed improvement).
        - many minor tweaks.

3.63 Wed May 16 14:10:06 CEST 2007
	- implement handcoded assembly for x86/amd64 SVR ABI.

3.62 Fri Apr 27 21:36:06 CEST 2007
	- upgrade libcoro (which might set unwind info correctly).
        - change default on linux to setjmp/longjmp.

3.61 Thu Apr 19 12:36:18 CEST 2007
	- Coro::Storable caused an endless loop when thawing invalid
          pst's sometimes.
	- use a Semaphore in Coro::Storable, as Storable doesn't
          seem to be reentrant (although it is documented to
          be threadsafe...).
        - fix Coro::Signal to bring back the original unreliable
          but stateful semantics.
        - fixed a lot of typos in Coro.pm (patch submitted by David
          Steinbrunner, which applied flawlessly).

3.6  Sat Apr 14 17:13:31 CEST 2007
   	- added some bugfixes to get eg/myhttpd working again.
        - added Coro::Storable for often-cede'ing freeze/thaw.
        - try to do a clean exit when a coroutine calls exit
          (EXPERIMENTAL).
        - got rid of indirect call through _coro_init.
        - updated the partly antique examples in eg/ to
          work again and be a bit less magic, too.
        - fixed Coro::Signal semantics to work as documented again.

3.55  Sun Mar 25 01:20:47 CET 2007
	- add SAVE_DEFFH to save the default filehandle and enable
          it by default.
        - finally move socket-operations from Coro::Socket to Coro::Handle
          to be able to unblock foreign sockets.
	- add Coro::State::save_also and guarded_save.
	- add count accessor to Coro::Semaphore.
        - add Coro::State::cctx_stacksize.